@@ -22,6 +22,9 @@ Core and builtins
 Library
 -------
 
+- Bug #1267547: Put proper recursive setup.py call into the
+  spec file generated by bdist_rpm.
+
 - Bug #1514693: Update turtle's heading when switching between
   degrees and radians.
 
